<resources>
    <string name="app_name">Soundboard</string>

    <string name="Button_text"><font size="10">Hello Darkness</font>\n\<font size="10">My Old Friend</font></string>
    <string name="Button_text1"><font size="9">It Was At This Moment </font>\n\<font size="9">That He Knew, He Had F***** Up</font></string>
    <string name="button_text2"><font size="12">To Be</font>\n\<font size="12">Continued...</font></string>
    <string name="button_text3"><font size="11">Running in</font>\n\<font size="11">The 90s</font></string>
    <string name="button_text4"><font size="11">Click for</font>\n\<font size="11">Free Food!</font></string>
    <string name="button_text5"><font size="11">In human</font>\n\<font size="11">Reactions</font></string>
    <string name="button_text6"><font size="11">Oh S***</font>\n\<font size="11">Dawg!</font></string>
    <string name="button_text7"><font size="9">Are you feeling</font>\n\<font size="9">it now mrkrabs?</font></string>
    <string name="button_text8"><font size="11">Willhelm</font>\n\<font size="11">Scream</font></string>
</resources>

