<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bruhBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bruh"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/carelesswhisperBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Careless Whisper"
            android:textSize="10dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/epicsaxguyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Epic Sax Guy"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/hellodarknessBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_text"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/itwasatthismomentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_text1"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/rickrollBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text4"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/runningin90sBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text3"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/tobecontinuedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text2"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>
</RelativeLayout>