<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelevisionActivity">


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/wrongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wrong!"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/dohBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Doh!"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ohshitdawgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text6"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/mrkrabsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text7"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/jeezrickBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jeez Rick!"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/mymanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My man!"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ohnoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oh No!"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/willhelmscreamBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text8"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>
</RelativeLayout>
